# fastapi-template

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
core/: db.py  dependencies.py  logger.py  settings.py
middleware/: cors.py  error_handler.py  logging.py
modules/echo/: constants.py  exceptions.py  funcs.py  models.py  router.py  schemas.py  services.py
modules/progas/: models.py  router.py
rules/: README.md  api_design.md  architecture.md  database.md  naming.md
shared/models/: base.py
shared/schemas/: common.py
utils/: helpers.py
